Show available wallets as radio group

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Halogen Template</title>
+    <title>my-project #4</title>
   </head>
   <body>
     <script src="./index.js"></script>
