@emurgo/cardano-serialization-lib-browser included using esbuild and webpack

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>my-project #4</title>
+    <title>my-project</title>
   </head>
   <body>
-    <script src="./index.js"></script>
+    <script>main()</script>
   </body>
 </html>
