Renamed module names from Example.* to Frontend.*

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Cardano DApp Connection Example</title>
+    <title>Cardano DApp Web-Frontend</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/b418186da2.js" crossorigin="anonymous"></script>
